<resources>
    <string name="app_name">TravelMemories</string>
    <string name="api_key" translatable="false">AIzaSyBMsAL5qJu7VX1yBoFHSwBFDljBXFY78-g</string>
    <string name="feedback_email" translatable="false">mikysimiky@gmail.com</string>
    <string name="feedback_subject" translatable="false">Application feedback</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Mihnea Dinica</string>
    <string name="nav_header_subtitle" translatable="false">mihneadinica@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="home_text">My travel memories</string>

    <string name="place_name">Place name</string>
    <string name="date_of_travel">Date of travel</string>
    <string name="date_of_travel_input">Click to pick a date</string>
    <string name="add_button_text_create">Create travel memory</string>
    <string name="add_button_text_update">Update travel memory</string>
    <string name="add_picture_button_text">Add picture</string>
    <string name="mood_text">Mood</string>
    <string name="type_of_travel_text">Type of travel</string>
    <string name="place_name_hint">Enter place name</string>
    <string name="notes">Notes</string>
    <string name="notes_hint">Add your thoughts here</string>
    <string name="notes_empty_message">No notes were added</string>
    <string name="location">Location</string>
    <string name="location_hint">Enter location</string>
    <string name="send_email_button">Send email</string>
    <string name="email_hint">Enter your feedback here</string>
    <string name="contact_us">Send us your thoughts!</string>
    <string name="darkmode_text">Switch to darkmode</string>
    <string name="map_type_text">Switch map view</string>

    // Spinner
    <string-array name="spinner_travel_types">
        <item>Other</item>
        <item>Business</item>
        <item>Holiday</item>
        <item>City break</item>
        <item>Adventure</item>
        <item>Organised trip</item>
    </string-array>
</resources>