<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelmemories.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_fragment_to_detailed_view_fragment"
            app:destination="@id/nav_detailedview"/>
        <action
            android:id="@+id/action_home_fragment_to_add_memory_fragment"
            app:destination="@id/nav_addmemory"/>
    </fragment>
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.travelmemories.ui.aboutus.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.travelmemories.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.travelmemories.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.travelmemories.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.travelmemories.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_detailedview"
        android:name="com.example.travelmemories.ui.detailedview.DetailedViewFragment"
        android:label="fragment_detailed_view"
        tools:layout="@layout/fragment_detailed_view">
        <argument
            android:name="memory_id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/nav_addmemory"
        android:name="com.example.travelmemories.ui.addmemory.AddMemoryFragment"
        android:label="AddMemoryFragment"
        tools:layout="@layout/fragment_add_memory">
        <argument
            android:name="memory_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_detailed_view_fragment_to_home_fragment"
            app:destination="@id/nav_home"/>
    </fragment>

</navigation>