<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailedview.DetailedViewFragment">

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_memory_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_margins_vertical"
            android:layout_marginBottom="@dimen/card_view_margins_vertical"
            android:layout_marginStart="@dimen/card_view_margins_horizontal"
            android:layout_marginEnd="@dimen/card_view_margins_horizontal"
            app:cardCornerRadius="@dimen/card_view_corners"
            app:cardBackgroundColor="@color/material_dynamic_neutral40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/first_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/second_row">

                    <TextView
                        android:id="@+id/place_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_name" />

                    <EditText
                        android:id="@+id/place_name_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:hint="@string/place_name_hint"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/second_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toBottomOf="@id/first_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/third_row">

                    <TextView
                        android:id="@+id/date_of_travel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_travel"/>

                    <TextView
                        android:id="@+id/date_of_travel_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:text="@string/date_of_travel_input"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/third_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toBottomOf="@id/second_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/forth_row">

                    <TextView
                        android:id="@+id/mood_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mood_text"/>

                    <com.google.android.material.slider.Slider
                        android:id="@+id/mood_slider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/forth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toBottomOf="@id/third_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/fifth_row">

                    <TextView
                        android:id="@+id/type_of_travel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/type_of_travel_text"/>

                    <Spinner
                        android:id="@+id/type_of_travel_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fifth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toBottomOf="@id/forth_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/sixth_row">

                    <TextView
                        android:id="@+id/notes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />

                    <EditText
                        android:id="@+id/notes_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:hint="@string/notes_hint"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sixth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    app:layout_constraintTop_toBottomOf="@id/fifth_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <EditText
                        android:id="@+id/location_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:hint="@string/location_hint"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textPersonName" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_memory_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/add_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>