<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="memory" type="com.example.travelmemories.memories.Memory" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailedview.DetailedViewFragment">

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_memory_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/card_view_margins_vertical"
            android:layout_marginHorizontal="@dimen/card_view_margins_horizontal"
            app:layout_constrainedHeight="true"
            app:cardCornerRadius="@dimen/card_view_corners"
            app:cardBackgroundColor="@color/material_dynamic_neutral40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/memory_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/first_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:id="@+id/first_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/memory_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/second_row">

                    <TextView
                        android:id="@+id/place_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_name" />

                    <TextView
                        android:id="@+id/place_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:text="@{memory.placeName}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/second_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/first_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/third_row">

                    <TextView
                        android:id="@+id/date_of_travel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_travel"/>

                    <TextView
                        android:id="@+id/date_of_travel_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:text="@{memory.travelTime}"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/third_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/second_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/forth_row">

                    <TextView
                        android:id="@+id/mood_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mood_text"/>

                    <TextView
                        android:id="@+id/mood_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/forth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/third_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/fifth_row">

                    <TextView
                        android:id="@+id/type_of_travel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/type_of_travel_text"/>

                    <TextView
                        android:id="@+id/type_of_travel_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:text="@{memory.travelType}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fifth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/forth_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/sixth_row">

                    <TextView
                        android:id="@+id/notes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />

                    <TextView
                        android:id="@+id/notes_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sixth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:layout_marginStart="@dimen/row_margin_start"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/fifth_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/seventh_row">

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/location_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/row_element_spacing"
                        android:text="@{memory.placeLocation}"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/seventh_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/row_padding"
                    app:cardCornerRadius="@dimen/card_view_corners"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toBottomOf="@id/sixth_row"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <FrameLayout
                        android:id="@+id/map_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>